--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-paper": "^3.4.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
+    "react-navigation-material-bottom-tabs": "^2.1.5",
     "react-redux": "^7.1.3",
     "reactotron-react-native": "^4.0.2",
     "reactotron-redux": "^3.1.2",
