--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.7.1",
+    "@rocketseat/unform": "^1.6.1",
     "axios": "^0.19.0",
     "immer": "^5.1.0",
     "prop-types": "^15.7.2",
@@ -31,7 +32,8 @@
     "redux-saga": "^1.1.3",
     "reduxsauce": "^1.1.1",
     "seamless-immutable": "^7.1.4",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "yup": "^0.28.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
