--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-gesture-handler": "^1.5.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^3.4.0",
+    "react-native-sectioned-multi-select": "^0.7.6",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-material-bottom-tabs": "^2.1.5",
@@ -27,6 +28,7 @@
     "reactotron-react-native": "^4.0.2",
     "reactotron-redux": "^3.1.2",
     "reactotron-redux-saga": "^4.2.3",
+    "realm": "^3.6.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
