--- a/ios/Podfile
+++ b/ios/Podfile
@@ -36,6 +36,8 @@ target 'PIB_App' do
 
   pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
 
+  pod 'RealmJS', :path => '../node_modules/realm'
+
   target 'PIB_AppTests' do
     inherit! :search_paths
     # Pods for testing
