--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.7.1",
+    "@react-native-community/datetimepicker": "^2.1.0",
     "@rocketseat/unform": "^1.6.1",
     "axios": "^0.19.0",
     "immer": "^5.1.0",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal-datetime-picker": "8.0.6",
     "react-native-paper": "^3.4.0",
     "react-native-sectioned-multi-select": "^0.7.6",
     "react-native-vector-icons": "^6.6.0",
